@@ -3,4 +3,4 @@ Results needn't contain all available information, see also on-line
 full information search service at the web-site http://www.nic.cz/
 
 Rights restricted by copyright.
-See http://www.nic.cz/en/domains/copyright.php
+http://new.nic.cz/page/306/intended-use-of-supplied-data-and-information/
