@@ -1,3 +1,9 @@
+2007-10-01 Jan Kryl (version 2.0.2)
+
+	* Email of object registrar is not displayed in whois output.
+
+	* Updated copyright URL.
+
 2007-09-27 Jan Kryl (version 2.0.1)
 
 	* mod_whoisd crashed apache when there were more than 2 search
